service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    app: app1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
