ingress.yaml
apiVersion: netkorking.k8s.io/v1
kind: Ingress
metadata:
  name: app1
  lables:
    app: app1
spec:
  rules:
  - host: app1.dvergobb.local
    http:
    path: /
    pathType: Prefix
    backend:
      service:
        name: app1
        port:
          number: 8888
